[package]
name = "xigua"
version = "0.1.0"
edition = "2018"
autobins = false
autoexamples= false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
hyper-tls="0.5.0"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
bytes = "1.1.0"
headless_chrome ={ version = "0.9.0",default_features = false,features=[]}
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
failure = "0.1.8"
chrono = "0.4"
humansize = "1.1.1"
log = "0.4"
encoding = "0.2"
pbr="1.0.4"
lazy_static = "1.4.0"

[dependencies.clap]
version = "~2.27.0"
default-features = false



# cargo build
[profile.dev]
opt-level = 0
debug = true
split-debuginfo = '...'  # Platform-specific.
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

# cargo build --release
[profile.release]
opt-level = 3
debug = false
split-debuginfo = '...'  # Platform-specific.
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false


# cargo run command with the --bin <bin-name>
[[example]]
name = "testlog"
test = false
bench = false

[[example]]
name = "test2"

[[example]]
name = "gui"

[[example]]
name = "asynsc"

[[example]]
name = "testlive"

[[bin]]
name = "xigua"